Fixes the visibility of the Campaign cancel button for Jetpack Mobile apps (#80620)

--- a/client/my-sites/promote-post-i2/style.scss
+++ b/client/my-sites/promote-post-i2/style.scss
@@ -418,7 +418,7 @@ body.is-section-promote-post-i2 {
 			.promote-post-i2 .section-nav,
 			.promote-post-i2 .post-item__view-link,
 			.promote-post-i2 .campaign-item-breadcrumb,
-			.promote-post-i2 .campaign-item-details__support-buttons {
+			.promote-post-i2 .campaign-item-details__support-buttons .contact-support-button {
 				display: none;
 			}
 
